landing kaynaklar düzenlendi

--- a/weeb_landing/index.html
+++ b/weeb_landing/index.html
@@ -408,7 +408,9 @@
 
                                     <span class="text-[10px] font-mono border border-orange-500/30 text-orange-400/80 px-2 py-1 rounded">Animecix</span>
 
-                                    <span class="text-[10px] font-mono border border-green-500/30 text-green-400/80 px-2 py-1 rounded">Weeb API</span>
+                                    <span class="text-[10px] font-mono border border-green-500/30 text-green-400/80 px-2 py-1 rounded">TürkAnime</span>
+                                    
+                                    <span class="text-[10px] font-mono border border-yellow-500/30 text-yellow-400/80 px-2 py-1 rounded">Anizle</span>
 
                                 </div>
 
@@ -1014,7 +1016,7 @@
 
                         title: "Çoklu Kaynak",
 
-                        desc: "HiAnime, AllAnime, Animecix ve Weeb API. Türkçe ve İngilizce altyazılı içerikler tek çatı altında. Kaynak çalışmıyorsa anında geçiş yapın."
+                        desc: "HiAnime, AllAnime, Animecix, TürkAnime ve Anizle. Türkçe ve İngilizce altyazılı içerikler tek çatı altında. Kaynak çalışmıyorsa anında geçiş yapın."
 
                     },
 
@@ -1132,7 +1134,7 @@
 
                         title: "Multiple Sources",
 
-                        desc: "HiAnime, AllAnime, Animecix and Weeb API. Turkish and English subtitled content under one roof. Switch instantly if a source is down."
+                        desc: "HiAnime, AllAnime, Animecix, TürkAnime and Anizle. Turkish and English subtitled content under one roof. Switch instantly if a source is down."
 
                     },
 
